prevent jumping userlogs when they are expanded; keep current scroll position when changing the position of the inline input

--- a/app/app.less
+++ b/app/app.less
@@ -700,7 +700,8 @@ md-option:not([selected]) {
 
 /* Needed to get scrollbar styling to take effect */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 8px;
+    height: 8px;
 }
 
 /* Track */
