--- a/app/userlogs/userlogs.less
+++ b/app/userlogs/userlogs.less
@@ -82,10 +82,11 @@
 }
 
 .compressed-userlog {
-    max-height: 32px;
-    min-height: 32px;
-    overflow: hidden;
-    line-height: 32px;
+    max-height: 32px !important;
+    min-height: 32px !important;
+    overflow: hidden !important;
+    line-height: 32px !important;
+    margin: 0 !important;
 }
 
 .tags-list-container {
